# Alpha-Gallery

./: README.md  Team-Agreement.md  heroku.yml  manage.py  pyproject.toml  requirements.md  requirements.txt
Alpha_Gallery_API/: asgi.py  settings.py  urls.py
Alpha_Gallery_App/: admin.py  apps.py  urls.py  views.py
Garllery-API/: db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
Garllery-API/Alpha_Gallery_API/: .env  settings.py  urls.py  wsgi.py
Garllery-API/Alpha_Gallery_App/: models.py  serializer.py  urls.py  views.py
Garllery-API/Alpha_Gallery_App/migrations/: 0001_initial.py  0002_remove_posts_username.py  0003_auto_20210812_0641.py  0004_posts_username.py  0005_remove_posts_username.py  0006_alter_posts_comments.py  0007_alter_user_email.py  0008_alter_user_email.py
